--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,10 +6,27 @@ data_paths:
   processed_data: "career_assistant/data/processed/"
   vector_store: "career_assistant/data/vector_store/default/"
   model_dir: "career_assistant/artifacts/models/"
+  qdrant_storage: "./qdrant_storage/"
 
 # --- Embeddings ---
-embedding_model: "sentence-transformers/all-MiniLM-L6-v2"
+embedding_model: "sentence-transformers/intfloat/e5-base-v2"
 embedding_dim: 384
+
+# --- Qdrant Vector Database ---
+qdrant:
+  host: "localhost"
+  port: 6333
+  collection_name: "career_vectors"
+  distance_metric: "Cosine"
+  recreate_collection: false
+
+# --- Semantic Matching ---
+semantic_matching:
+  batch_size: 64
+  top_n: 5
+  similarity_threshold: 0.75
+  use_qdrant: true
+  save_embeddings: true
 
 # --- RAG Pipeline ---
 retriever:
@@ -20,6 +37,12 @@ generator:
   model_name: "google/flan-t5-small"
   max_length: 200
   min_length: 60
+
+# --- Docker ---
+docker:
+  image_name: "career_assistant"
+  container_port: 8080
+  host_port: 8080
 
 # --- Logging ---
 logging:
