--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ accelerate==1.11.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
+alembic==1.17.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
@@ -15,33 +16,48 @@ babel==2.17.0
 beautifulsoup4==4.14.2
 bitsandbytes==0.48.2
 bleach==6.2.0
+blinker==1.9.0
 blis==1.3.0
+cachetools==6.2.1
 catalogue==2.0.10
 certifi==2025.10.5
 cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.3.0
 cloudpathlib==0.22.0
+cloudpickle==3.1.2
 comm==0.2.3
 confection==0.1.5
 contourpy==1.3.3
+cryptography==46.0.3
 cycler==0.12.1
 cymem==2.0.11
+databricks-sdk==0.73.0
 dataclasses-json==0.6.7
 debugpy==1.8.17
 decorator==5.2.1
 defusedxml==0.7.1
+docker==7.1.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
 executing==2.2.1
 fastapi==0.121.1
 fastjsonschema==2.21.2
 filelock==3.20.0
+Flask==3.1.2
+flask-cors==6.0.1
 fonttools==4.60.1
 fqdn==1.5.1
 frozenlist==1.8.0
 fsspec==2025.9.0
+gitdb==4.0.12
+GitPython==3.1.45
+google-auth==2.43.0
+graphene==3.4.3
+graphql-core==3.2.7
+graphql-relay==3.2.0
 greenlet==3.2.4
 grpcio==1.76.0
+gunicorn==23.0.0
 h11==0.16.0
 h2==4.3.0
 hf-xet==1.1.10
@@ -49,15 +65,18 @@ hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.3
+huey==2.5.4
 huggingface-hub==0.35.3
 hyperframe==6.1.0
 idna==3.11
+importlib_metadata==8.7.0
 iniconfig==2.3.0
 ipykernel==6.30.1
 ipython==9.6.0
 ipython_pygments_lexers==1.1.1
 ipywidgets==8.1.7
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.6
 joblib==1.5.2
@@ -93,6 +112,7 @@ langgraph-sdk==0.2.9
 langsmith==0.4.38
 language_data==1.3.0
 lark==1.3.0
+Mako==1.3.10
 marisa-trie==1.3.1
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
@@ -101,6 +121,9 @@ matplotlib==3.10.6
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.4
+mlflow==3.6.0
+mlflow-skinny==3.6.0
+mlflow-tracing==3.6.0
 mpmath==1.3.0
 multidict==6.7.0
 murmurhash==1.0.13
@@ -130,6 +153,10 @@ nvidia-nccl-cu12==2.27.5
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.8.90
+opentelemetry-api==1.38.0
+opentelemetry-proto==1.38.0
+opentelemetry-sdk==1.38.0
+opentelemetry-semantic-conventions==0.59b0
 orjson==3.11.4
 ormsgpack==1.11.0
 packaging==25.0
@@ -150,6 +177,9 @@ protobuf==6.33.0
 psutil==7.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==22.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.12.3
 pydantic-settings==2.11.0
@@ -175,6 +205,7 @@ rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rich==14.1.0
 rpds-py==0.27.1
+rsa==4.9.1
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
@@ -186,12 +217,14 @@ setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 smart_open==7.3.1
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 spacy==3.8.7
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.44
+sqlparse==0.5.3
 srsly==2.5.1
 stack-data==0.6.3
 starlette==0.49.3
@@ -224,9 +257,11 @@ weasel==0.4.1
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
 widgetsnbextension==4.0.14
 wordcloud==1.9.4
 wrapt==1.17.3
 xxhash==3.6.0
 yarl==1.22.0
+zipp==3.23.0
 zstandard==0.25.0
