--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,8 +2,50 @@ version: "3.9"
 
 services:
   api:
+    build: .
     ports:
       - "8000:8000"
     volumes:
-      - .:/app   # Mount code for hot reload
+      - .:/app
+    environment:
+      - ENV=development
+      - POSTGRES_USER=mlflow
+      - POSTGRES_PASSWORD=mlflowpass
+      - POSTGRES_DB=mlflow_db
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - MLFLOW_TRACKING_URI=http://mlflow:5000
+      - MLFLOW_BACKEND_STORE_URI=postgresql://mlflow:mlflowpass@postgres:5432/mlflow_db
+    depends_on:
+      - postgres
+      - mlflow
     command: uvicorn career_assistant.api.main:app --host 0.0.0.0 --port 8000 --reload
+
+  postgres:
+    image: postgres:15
+    restart: always
+    environment:
+      POSTGRES_USER: mlflow
+      POSTGRES_PASSWORD: mlflowpass
+      POSTGRES_DB: mlflow_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  mlflow:
+    image: ghcr.io/mlflow/mlflow:v3.6.0
+    ports:
+      - "5000:5000"
+    environment:
+      MLFLOW_BACKEND_STORE_URI: postgresql://mlflow:mlflowpass@postgres:5432/mlflow_db
+      MLFLOW_DEFAULT_ARTIFACT_ROOT: /mlflow/artifacts
+    volumes:
+      - ./mlflow_artifacts:/mlflow/artifacts
+    depends_on:
+      - postgres
+    command: mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri $MLFLOW_BACKEND_STORE_URI --default-artifact-root $MLFLOW_DEFAULT_ARTIFACT_ROOT
+  
+volumes:
+  pgdata:
+  mlflow_artifacts:
